# rimd

./: Cargo.toml  README.md
src/: builder.rs  lib.rs  meta.rs  midi.rs
