[package]
name = "rimd"
description = "Library for handling MIDI and reading and writing Standard MIDI Files in Rust"
version = "0.0.3"
authors = ["Nick Lanham <nick@afternight.org>", "Alex Kesling <alex@kesling.co>"]
homepage = "https://github.com/RustAudio/rimd"
repository = "https://github.com/RustAudio/rimd"
documentation = "https://docs.rs/rimd/"
readme = "README.md"
keywords = ["midi", "smf", "music", "audio", "mid"]
license = "MIT"

[dependencies]
byteorder = "1.3"
encoding = "0.2"
num-traits = "0.2"
num-derive = "0.3"
